# multi-agent-sql-devops

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  test_review.sql
.github/workflows/: sql-review.yml
Documents/: Architecture.html  Cost Management.html  Executive Summary.html  Getting Started Guide.html  Lessons Learned.html
Polished Requirements/: requirements.html
Rough Requirements/: Strategic Marketing.txt  Technical Requirements.txt  deployment and hosting strategy.txt
infra/: deploy.sh  main.bicep  parameters.json
src/: config.py  main.py
src/agents/: doc_genie.py  linter.py  performance.py  skeptic.py
src/agents/prompts/: doc_genie_system.md  linter_system.md  performance_system.md  skeptic_system.md
src/graph/: builder.py  edges.py  nodes.py  state.py
src/models/: agent_finding.py  review_report.py  review_request.py
src/services/: cosmos_client.py  keyvault_client.py
src/telemetry/: tracing.py
src/tools/: changelog_writer.py  schema_checker.py  sql_formatter.py
tests/: conftest.py  test_api.py  test_doc_genie.py  test_graph_flow.py  test_linter.py  test_performance.py  test_skeptic.py
tests/fixtures/: bad_query.sql  good_query.sql  schema.json
